# Routestra

./: .gitignore  CHANGELOG.md  README.md  cli.py  pyproject.toml  routestra_run.py
.github/workflows/: ci.yml
.pgf/: DESIGN-Routestra.md  DESIGN-RoutestraPacks.md  WORKPLAN-Routestra.md  status-Routestra.json
.pgxf/: INDEX-Routestra.json
docs/: ARCHITECTURE.md  DETERMINISM.md  PACK-CONTRACT.md
routestra_core/: __init__.py  bound.py  candidate.py  determinism.py  fingerprint.py  ledger.py  provenance.py  route.py  score.py  verdict.py
routestra_packs/: _base.py  climate_resilience.py  compute_power.py  contract_relay.py  flow_mesh.py  inference_grid.py  loader.py  power_roam.py  season_battery.py  soil_carbon.py  thermal_cascade.py  thermal_plume.py  waste_stack.py  watt_fabric.py
schemas/: bound-verdict.schema.json  candidate-climate.schema.json  candidate-compute.schema.json  candidate-contractrelay.schema.json  candidate-fabric.schema.json  candidate-flow.schema.json  candidate-inference.schema.json  candidate-plume.schema.json  candidate-roam.schema.json  candidate-season.schema.json  candidate-soil.schema.json  candidate-thermal.schema.json  candidate-waste.schema.json  ledger.schema.json  manifest.schema.json  route-plan.schema.json
scripts/: smoke.sh
tests/: test_contract_relay_parity.py  test_core.py  test_flow_mesh_parity.py  test_packs.py  test_packs_contract.py  test_pipeline.py
